added 3rd commit

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
       <!-- feni donation  end  -->
 
-      <!-- quota movement donation  start  -->
+      <!-- quota movement   start  -->
       <div
         class="lg:flex card-side bg-base-100 shadow-xl border-2 border-base-200 md:p-5 p-4 lg:gap-6 rounded-lg mb-5">
         <figure class="md:w-[50%] mb-4">
@@ -193,7 +193,7 @@
           <div class="card-actions w-full">
             <button
               id="quota-movement"
-              class="btn text-[#111111] font-[601] text-[1rem] w-full bg-[#B4F461]">
+              class="btn text-[#111111] font-[601] text-[1rem] w-full bg-[#b2f757]">
               Donate Now
             </button>
           </div>
@@ -221,7 +221,7 @@
         </div>
       </div>
     </dialog>
-    <!-- pop  msg end -->
+    <!-- pop  mesg end -->
     <script src="./java script/repeatable_function.js"></script>
     <script src="./java script/donation.js"></script>
   </body>
