--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
       </div>
     </dialog>
-    <!-- pop  mesg end -->
+    <!-- pop  messge end -->
     <script src="./java script/repeatable_function.js"></script>
     <script src="./java script/donation.js"></script>
   </body>
