added 5th commit

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="card-actions w-full">
             <button
               id="donate-feni"
-              class="btn text-[#070707] font-[601] text-[1rem] w-full bg-[#b7f862]">
+              class="btn text-[#020202] font-[601] text-[1rem] w-full bg-[#b7f862]">
               Donate Now
             </button>
           </div>
@@ -199,7 +199,7 @@
           </div>
         </div>
       </div>
-      <!-- quota movement donation card end  -->
+      <!-- quota movement donation  end  -->
     </main>
     <!-- donation  end  -->
 
@@ -221,7 +221,7 @@
         </div>
       </div>
     </dialog>
-    <!-- pop  messge end -->
+    <!-- pop  message end -->
     <script src="./java script/repeatable_function.js"></script>
     <script src="./java script/donation.js"></script>
   </body>
