added 6th commit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="navbar-end flex gap-1 items-center">
             <img src="./assets/coin.png" alt="" />
             <h2 class="font-[600] md:text-[1.3rem] text-[0.9rem]">
-              <span id="user-balance">10,000</span> BDT
+              <span id="user-balance">10000</span> BDT
             </h2>
           </div>
         </div>
@@ -106,7 +106,7 @@
           <div class="card-actions w-full">
             <button
               id="donate-noakhali"
-              class="btn text-[#111111] font-[601] text-[1rem] w-full bg-[#B4F461]">
+              class="btn text-[#111111] font-[601] text-[1rem] w-full bg-[#baff60]">
               Donate Now
             </button>
           </div>
